--- a/R/modeling-sampling.Rmd
+++ b/R/modeling-sampling.Rmd
@@ -8,8 +8,7 @@ output: html_document
 # load packages
 
 ```{r}
-pkgs <- c("tidyverse")
-lapply(pkgs, library, character.only = T)
+pacman::p_load(tidyverse)
 ```
 
 
